--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 끝없이 공부하는 퍼블리셔, alice
-subtitle: 블로그에 오신 것을 환영합니다🐾
+subtitle: 🐱블로그에 오신 것을 환영합니다🐾
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
