--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title: 끝없이 공부하는 퍼블리셔, Alice
-subtitle: 🐱블로그에 오신 것을 환영합니다🐾
+title: 끝없이 공부하는 퍼블리셔, Alice! 
+subtitle: 🤩 ochor 블로그에 오신 것을 환영합니다 🤩
 description: >- # this means to ignore newlines until "baseurl:"
-  공부를 하면서 기록장 용으로 만든 깃허브 블로그입니다.
 
 url: "https://al1ce2.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -23,12 +22,11 @@ urls:
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
-
 author_logo: profile.png
-author: al1ce2
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "ylm47292@gmail.com"
-author_location: Korea (Republic of)
+author: Alice
+author_bio: Hi, my name is ochor. I built this site using devlopr-jekyll :D
+author_email: "ylm0710@gmail.com"
+author_location: Korea(Republic of)
 author_website_url: "https://al1ce2.github.io"
 typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
@@ -72,7 +70,7 @@ author_project_details:
 
 # social links
 twitter_username: johndoe
-github_username:  sujaykundu777
+github_username:  ochor
 facebook_username: johndoe
 linkedin_username: johndoe
 behance_username: johndoe
